syntax = "proto3"; // версия proto (по умолчанию - proto2)

package lectiongrpc.fine.v1; // пакет - для операций import'а
option go_package = "lectiongrpc/pkg/fine/v1"; // полный путь пакета для go

import "google/protobuf/timestamp.proto"; // импортируем из другого proto (includes -> third_party)

service FineService { // определение сервиса
  rpc FindByUserId (FinesRequest) returns (FinesResponse); // метод
}

message FinesRequest { // запрос
  int64 userId = 1;
}

message FinesResponse { // ответ
  int64 userId = 1;
  repeated Fine items = 2;
}

message Fine { // штраф
  int64 id = 1;
  int64 amount = 2;
  string number = 3;
  google.protobuf.Timestamp created = 4;
}

